--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
     "prefer-stable": true,
     "require": {
         "php": "^8.0",
-        "openai-php/client": "^0.10"
+        "openai-php/client": "^0.10",
+        "symfony/http-client": "^7.1",
+        "nyholm/psr7": "^1.8"
     },
     "config": {
         "allow-plugins": {
